# candy-shop-api

./: .flaskenv  .gitignore  Dockerfile  Procfile  README.md  config.py  db.sqlite  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.private/: .flaskenv  postgres.env
api/: .flaskenv  __init__.py  config.py  decorators.py  manage.py  models.py  requirements.txt  shemas.py  views.py
api/core/: models.py
api/routes/: __init__.py  items.py  order.py  order_item.py  user.py
api/seeds/: __init__.py  items.py  tag_item_rel.py  tags.py  users.py
api/views/: __init__.py  order.py  order_item.py
app/: routes.py
core/: __init__.py  models.py  routes.py
core/templates/: index.html
migrations/versions/: 09a11e291e32_init_migrate.py
postgres/: Dockerfile  deploy_schemas.sql
postgres/seed/: example.sql
postgres/tables/: example.sql
scripts/: docker_script
src/: App.js
